
[TestEntc/generate_with_entc - 1]
// Code generated by ent, DO NOT EDIT.

package ent

import (
    "ent/todo"
)

// AllTodoStatus will return all of todo's status values.
func AllTodoStatus() []todo.Status {
    return []todo.Status{
        todo.StatusOngoing,
        todo.StatusCompleted,
        todo.StatusLater,
    }
}

---

[TestEntc/custom_verb - 1]
// Code generated by ent, DO NOT EDIT.

package ent

import (
    "ent/todo"
)

// ReturnTodoStatus will return all of todo's status values.
func ReturnTodoStatus() []todo.Status {
    return []todo.Status{
        todo.StatusOngoing,
        todo.StatusCompleted,
        todo.StatusLater,
    }
}

---
